# go-bazel-gazelle-docker-template

./: .gitignore  README.md  WORKSPACE
go/echo/: BUILD.bazel  hello.go
