load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "echo_lib",
    srcs = ["hello.go"],
    importpath = "github.com/example/project/go/echo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "echo",
    embed = [":echo_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "echo_image",
    architecture = "arm64",
    embed = [":echo_lib"],
    goarch = "arm64",
    goos = "linux",
    importpath = "github.com/shadanan/go-bazel-gazelle-docker-template/go/echo",
)
